ChnageLog
=========

0.3.0.dev0
    * fix update file structure
    * add commands DELETE_FILE,DELETE_DIRECTORY,CREATE_DIRECTORY
    * add error.ErrorState - chained error state infrastructure
    * rename metadata.*filaname to metadata.*path where appropriate
    * check gcode extensions ".gcode", ".gc", ".g", ".gco" for FDM
    * bugfix: don't fail on extracting metadata from non-existing files

0.2.0 (2020-12-14)

    * get_token method called in Printer.loop
    * Python 3.9 check
    * api_key in INFO event
    * metadata in file_info
    * preview in metadata

0.1.3 (2020-12-01)

    * Printer object without sn, fingerprint, server and token
    * Revert ability to use any Command class as it seems too confusing